--- a/Recipe/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/Recipe/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,17 +1,30 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button
+            type="submit"
+            class="btn btn-success"
+            [disabled]="!recipeForm.valid"
+          >
+            Save
+          </button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">
+            Cancel
+          </button>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              formControlName="name"
+            />
           </div>
         </div>
       </div>
@@ -19,13 +32,19 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" id="imagePath" class="form-control" />
+            <input
+              type="text"
+              id="imagePath"
+              class="form-control"
+              formControlName="imagePath"
+              #imagePath
+            />
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive" alt="" />
+          <img [src]="imagePath.value" class="img-responsive" alt="" />
         </div>
       </div>
       <div class="row">
@@ -37,21 +56,58 @@
               id="description"
               class="form-control"
               rows="6"
+              formControlName="description"
             ></textarea>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div
+            class="row"
+            *ngFor="
+              let ingredientCtrl of recipeForm.get('ingredients')['controls'];
+              let i = index
+            "
+            [formGroupName]="i"
+            style="margin-top: 10px;"
+          >
             <div class="col-xs-8">
-              <input type="text" id="name" class="form-control" />
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                formControlName="name"
+              />
             </div>
             <div class="col-xs-2">
-              <input type="number" id="name" class="form-control" />
+              <input
+                type="number"
+                id="name"
+                class="form-control"
+                formControlName="amount"
+              />
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)"
+              >
+                X
+              </button>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col-xs-12">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="onAddIngredient()"
+              >
+                Add Ingredient
+              </button>
             </div>
           </div>
         </div>
