--- a/ng2-charts/charts/src/app/my-bar-chart/my-bar-chart.component.html
+++ b/ng2-charts/charts/src/app/my-bar-chart/my-bar-chart.component.html
@@ -7,6 +7,7 @@
       [options]="barChartOptions"
       [legend]="barChartLegend"
       [chartType]="barChartType"
+      [colors]="barChartColors"
     ></canvas>
   </div>
 </div>
